Added preview and groups fields

--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -1,5 +1,7 @@
 {
     "Color": "Цвет",
+    "Groups": "Группы",
+    "Preview": "Превью",
     "Statuses management": "Управление статусами",
     "Statuses": "Статусы"
 }
