--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -11,5 +11,6 @@
     "Status was removed": "Статус удален",
     "Status was saved": "Статус сохранен",
     "Statuses management": "Управление статусами",
-    "Statuses": "Статусы"
+    "Statuses": "Статусы",
+    "The status will be deleted without the possibility of recovery": "Статус будет удален без возможности восстановления"
 }
