Updated "Statuses count" localization

--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -16,6 +16,7 @@
     "Status groups": "Группы статусов",
     "Status was removed": "Статус удален",
     "Status was saved": "Статус сохранен",
+    "Statuses count": "Количество статусов",
     "Statuses management": "Управление статусами",
     "Statuses": "Статусы",
     "The status group will be deleted without the possibility of recovery": "Группа статусов будет удалена без возможности восстановления",
