--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -11,6 +11,7 @@
     "Edit status": "Редактирование статуса",
     "Groups": "Группы",
     "Preview": "Превью",
+    "Select groups": "Выберите группы",
     "Status group was removed": "Группа удалена",
     "Status group was saved": "Группа сохранена",
     "Status groups": "Группы статусов",
